[package]
name = "kvs"
version = "0.1.0"
authors = ["exfly <exflyg@gmail.com>"]
edition = "2018"
description = "project 01 solution"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.32.0"
structopt = "0.3"

[dev-dependencies]
assert_cmd = "0.11.0"
predicates = "1.0.0"
