[package]
name = "kvs"
version = "0.1.0"
authors = ["exfly <exflyg@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.32.0"
structopt = "0.2.15"
failure = "0.1.5"
serde = { version = "1.0.89", features = ["derive"] }
serde_json = "1.0.39"
log = "0.4.6"
env_logger = "0.6.1"
sled = "0.22.1"

# slog = { version = "2.5.0", features = ["max_level_trace", "release_max_level_debug"] }
# slog-async = "2.3"
# slog-envlogger = "2.1.0"
# slog-scope = "4.0"
# slog-term = "2.4.1"

[dev-dependencies]
assert_cmd = "0.11.0"
predicates = "1.0.0"
tempfile = "3.0.7"
walkdir = "2.2.7"
criterion = "0.2.11"
rand = "0.6.5"
serde_test = "1.0"

[profile.release]
debug = true
